Fixed text background blur to be more readable

--- a/static/css/wasm.css
+++ b/static/css/wasm.css
@@ -14,6 +14,8 @@
   margin-right: var(--wasm-frame-side-margin);
   padding: 2%;
   margin-bottom: 3vh;
+  backdrop-filter: blur(var(--blur-size));
+  -webkit-backdrop-filter: blur(var(--blur-size));
 }
 @media {
   .wasm_frame{
